--- a/index.html
+++ b/index.html
@@ -240,15 +240,77 @@ footer{
 
 <div id="category-bar"></div>
 
+<!-- Note Section -->
 <div class="note-wrapper">
-  <div class="note-header" id="noteToggle">Note</div>
-  <div class="note-content" id="noteContent">
-    <p>This collection reflects layered Hindu cultural knowledge drawn from Vedic, Smriti, Agama, Puranic, folk, and modern dharmic traditions.</p>
-    <ul class="inline-list">
-      <li>Vedic</li><li>Smriti</li><li>Agama</li><li>Puranic</li><li>Folk</li><li>Modern</li>
-    </ul>
-    <p class="note-footer">No modern practice is presented as ancient.</p>
+
+  <div class="note-header" id="noteToggle">
+    Note
   </div>
+
+  <div class="note-content" id="noteContent">
+
+    <h4>Understanding How These Occasions Are Identified</h4>
+
+    <p>
+      The occasions presented here are identified using a layered cultural understanding rooted in Hindu civilizational knowledge, where sound and music are regarded as sacred forces shaping life, society, and the environment.
+    </p>
+
+    <h5>Primary Sources</h5>
+    <ul>
+      <li>The Vedas, with special emphasis on the Sāmaveda, for principles of sacred sound (Nāda)</li>
+      <li>Gṛhya Sūtras and Dharmaśāstras for life-cycle rites (Saṁskāras)</li>
+      <li>Āgamas for temple-based ritual sound practices</li>
+      <li>Purāṇas for festival, river, and seasonal contexts</li>
+    </ul>
+
+    <h5>Secondary Sources</h5>
+    <ul>
+      <li>Living temple traditions</li>
+      <li>Regional folk practices</li>
+      <li>Oral cultural continuities</li>
+      <li>Community-based ritual observances</li>
+    </ul>
+
+    <h5>How Occasions Are Classified</h5>
+    <p>
+      Each occasion is grouped based on the source lineage from which the practice emerges. This does not imply hierarchy, but helps understand cultural roots.
+    </p>
+
+    <ul class="inline-list">
+      <li>Vedic</li>
+      <li>Smriti</li>
+      <li>Agama</li>
+      <li>Puranic</li>
+      <li>Folk / Regional</li>
+      <li>Modern (Dharmic Extension)</li>
+    </ul>
+
+    <h5>Modern Life Contexts</h5>
+    <p>
+      Contemporary occasions are included only when they align with enduring Hindu principles:
+    </p>
+
+    <ul>
+      <li>Auspicious beginnings (Śubha ārambha)</li>
+      <li>Gratitude (Kṛtajñatā)</li>
+      <li>Harmony between human activity and cosmic order (Ṛta)</li>
+    </ul>
+
+    <p>
+      Such occasions are clearly identified as modern extensions, ensuring clarity and cultural transparency.
+    </p>
+
+    <h5>Scope</h5>
+    <p>
+      This collection does not attempt to list every possible occasion. It reflects a living, evolving cultural expression shaped by texts, traditions, and continued practice.
+    </p>
+
+    <p class="note-footer">
+      No practice is presented as invented, and no modern practice is presented as ancient.
+    </p>
+
+  </div>
+
 </div>
 
 <footer>
