--- a/index.html
+++ b/index.html
@@ -218,10 +218,37 @@ footer{
 <h1>Traditional Auspicious Music in Hindu Civilization</h1>
 
 <div class="intro">
-  <p>From the earliest times, Hindu civilization has regarded sound and music as sacred forces that harmonize human life with cosmic order (ṛta).</p>
-  <p>The Sāmaveda is entirely dedicated to musical chanting, showing that sacred knowledge itself was meant to be sung.</p>
-  <p>Gṛhya Sūtras prescribe music during household rites such as birth, naming, education, marriage, and funerals.</p>
-  <p>Smṛtis, Purāṇas, and the Nāṭya Śāstra affirm music as essential to temples, festivals, and social harmony.</p>
+
+<p>
+From the earliest times, Hindu civilization has regarded sound and music as sacred forces that harmonize human life with cosmic order (ṛta). The Vedas describe sound (Nāda) as a divine principle, with mantra and melody used to invoke peace, prosperity, health, and spiritual balance.
+</p>
+
+<p>
+The Sāmaveda is entirely dedicated to musical chanting, showing that sacred knowledge itself was meant to be sung. Vedic hymns were not merely recited — they were performed with rhythm and tonal precision to create auspicious vibration during rituals, life events, and daily worship.
+</p>
+
+<p>
+The Gṛhya Sūtras prescribe music and sacred sound during household rites (saṁskāras) such as birth ceremonies, naming, education, marriage, and funeral observances. These texts establish that important moments of human life should be accompanied by auspicious sound to sanctify transitions.
+</p>
+
+<p>
+The Smṛtis and Purāṇas further affirm that music, drums, wind instruments, bells, and chanting are integral to temples, festivals, royal occasions, and community gatherings. They emphasize that auspicious music pleases the deities, purifies the environment, and brings collective harmony.
+</p>
+
+<p>
+The Nāṭya Śāstra declares music to be a divine gift meant for the welfare of society, capable of providing joy, moral guidance, and emotional healing.
+</p>
+
+<p>
+<strong>
+Auspicious music is not entertainment alone — it is a cultural and spiritual instrument used to bless every stage of life, from conception to remembrance after death, and every sphere of society, from home and temple to work, agriculture, and community life.
+</strong>
+</p>
+
+<p>
+In Hindu tradition, whenever a meaningful beginning, transition, or celebration occurs, sacred sound is invoked — to align human activity with divine order and to remind society that life itself is a sacred journey.
+</p>
+
 </div>
 
 <h2>Vidwaan Guidelines for Performing Auspicious Music</h2>
